--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "bootstrap-sass-official": "~3.1.1",
     "bootstrap": "~3.1.1",
     "font-awesome": ">=4.1.0",
-    "angular-sanitize": "~1.4.8"
+    "angular-sanitize": "~1.4.8",
+    "scrollmagic": "~2.0.5"
   },
   "main": [
     "./dist/osbPocketPoke.js",
